src/objects/ints__Credit_Report_Liability_Credit_Comment__c.object
<CustomObject>
    <fields>
        <fullName>ints__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditCommentText__c</fullName>
        <label>Credit Comment Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ints__CreditReportLiability__c</fullName>
        <label>Credit Report Liability</label>
        <referenceTo>ints__Credit_Report_Liability__c</referenceTo>
        <relationshipLabel>CreditReportLiabilityCreditComment</relationshipLabel>
        <relationshipName>CreditReportLiabilityCreditComment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__SourceType__c</fullName>
        <label>SourceType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Report Liability Credit Comment</label>
    <nameField>
        <displayFormat>CRLCC-{0000000000}</displayFormat>
        <label>Credit Report Liability Credit Comment N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Report Liability Credit Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>